--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
               </radialGradient>
             </defs>
           </svg>
-          
+          <div class="blur"></div>
+    </div>
+
+    <div class="title">
+        <p></p>
     </div>
 </body>
 </html>
