--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
     </div>
 
     <div class="title">
-        <p></p>
+        <p>Powerful tools</p>
+        <p>Toos</p>
+        <p>About</p>
     </div>
+
+    
 </body>
 </html>
